# OpenWnn

./: .gitignore  build.gradle
gradle/wrapper/: gradle-wrapper.properties
libs/: CMakeLists.txt
libs/libwnnDictionary/: CMakeLists.txt
